# niep_spectra_checker

./: .gitignore  Cargo.toml  README.md  startup.toml
Results/: 6x6_real_spectra.json
src/: lib.rs  main.rs  polynomial.rs  spectrum.rs  spectrum_mapper.rs
