[package]
name = "niep_spectra_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
log = "0.4.16"
toml = "0.5.10"
env_logger = "0.9.0"